@@ -10,14 +10,13 @@ import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.Comparator;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import net.minecraft.CrashReport;
 import net.minecraft.CrashReportCategory;
@@ -31,6 +30,7 @@ import net.minecraft.client.gui.components.Renderable;
 import net.minecraft.client.gui.components.TabOrderedElement;
 import net.minecraft.client.gui.components.Tooltip;
 import net.minecraft.client.gui.components.events.AbstractContainerEventHandler;
+import net.minecraft.client.gui.components.events.ContainerEventHandler;
 import net.minecraft.client.gui.components.events.GuiEventListener;
 import net.minecraft.client.gui.narration.NarratableEntry;
 import net.minecraft.client.gui.narration.NarratedElementType;
@@ -50,22 +50,24 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.Music;
 import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.util.StringUtil;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.level.Level;
 import org.slf4j.Logger;
 
 public abstract class Screen extends AbstractContainerEventHandler implements Renderable {
    private static final Logger LOGGER = LogUtils.getLogger();
    private static final Set<String> ALLOWED_PROTOCOLS = Sets.newHashSet(new String[]{"http", "https"});
    private static final Component USAGE_NARRATION = Component.translatable("narrator.screen.usage");
-   protected static final CubeMap CUBE_MAP = new CubeMap(new ResourceLocation("nothingtoseeheremovealong", "textures/gui/title/background/panorama"));
-   protected static final PanoramaRenderer PANORAMA = new PanoramaRenderer(CUBE_MAP);
-   public static final ResourceLocation MENU_BACKGROUND = new ResourceLocation("textures/gui/menu_background.png");
-   public static final ResourceLocation HEADER_SEPARATOR = new ResourceLocation("textures/gui/header_separator.png");
-   public static final ResourceLocation FOOTER_SEPARATOR = new ResourceLocation("textures/gui/footer_separator.png");
-   private static final ResourceLocation INWORLD_MENU_BACKGROUND = new ResourceLocation("textures/gui/inworld_menu_background.png");
-   public static final ResourceLocation INWORLD_HEADER_SEPARATOR = new ResourceLocation("textures/gui/inworld_header_separator.png");
-   public static final ResourceLocation INWORLD_FOOTER_SEPARATOR = new ResourceLocation("textures/gui/inworld_footer_separator.png");
+   protected static final CubeMap CUBE_MAP = new CubeMap(new ResourceLocation("textures/gui/title/background/panorama"));
+   protected static final PanoramaRenderer PANORAMA;
+   public static final ResourceLocation MENU_BACKGROUND;
+   public static final ResourceLocation HEADER_SEPARATOR;
+   public static final ResourceLocation FOOTER_SEPARATOR;
+   private static final ResourceLocation INWORLD_MENU_BACKGROUND;
+   public static final ResourceLocation INWORLD_HEADER_SEPARATOR;
+   public static final ResourceLocation INWORLD_FOOTER_SEPARATOR;
    protected final Component title;
    private final List<GuiEventListener> children = Lists.newArrayList();
    private final List<NarratableEntry> narratables = Lists.newArrayList();
@@ -78,8 +80,8 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    protected Font font;
    @Nullable
    private URI clickedLink;
-   private static final long NARRATE_SUPPRESS_AFTER_INIT_TIME = TimeUnit.SECONDS.toMillis(2L);
-   private static final long NARRATE_DELAY_NARRATOR_ENABLED = NARRATE_SUPPRESS_AFTER_INIT_TIME;
+   private static final long NARRATE_SUPPRESS_AFTER_INIT_TIME;
+   private static final long NARRATE_DELAY_NARRATOR_ENABLED;
    private static final long NARRATE_DELAY_MOUSE_MOVE = 750L;
    private static final long NARRATE_DELAY_MOUSE_ACTION = 200L;
    private static final long NARRATE_DELAY_KEYBOARD_ACTION = 200L;
@@ -89,12 +91,15 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    @Nullable
    private NarratableEntry lastNarratable;
    @Nullable
-   private Screen.DeferredTooltipRendering deferredTooltipRendering;
-   protected final Executor screenExecutor = var1x -> this.minecraft.execute(() -> {
+   private DeferredTooltipRendering deferredTooltipRendering;
+   protected final Executor screenExecutor = (var1x) -> {
+      this.minecraft.execute(() -> {
          if (this.minecraft.screen == this) {
             var1x.run();
          }
+
       });
+   };
 
    protected Screen(Component var1) {
       super();
@@ -115,18 +120,20 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
          var1.renderTooltip(this.font, this.deferredTooltipRendering.tooltip(), this.deferredTooltipRendering.positioner(), var2, var3);
          this.deferredTooltipRendering = null;
       }
+
    }
 
-   @Override
    public void render(GuiGraphics var1, int var2, int var3, float var4) {
       this.renderBackground(var1, var2, var3, var4);
+      Iterator var5 = this.renderables.iterator();
 
-      for(Renderable var6 : this.renderables) {
+      while(var5.hasNext()) {
+         Renderable var6 = (Renderable)var5.next();
          var6.render(var1, var2, var3, var4);
       }
+
    }
 
-   @Override
    public boolean keyPressed(int var1, int var2, int var3) {
       if (var1 == 256 && this.shouldCloseOnEsc()) {
          this.onClose();
@@ -134,14 +141,31 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       } else if (super.keyPressed(var1, var2, var3)) {
          return true;
       } else {
-         Object var4 = switch(var1) {
-            case 258 -> this.createTabEvent();
-            default -> null;
-            case 262 -> this.createArrowEvent(ScreenDirection.RIGHT);
-            case 263 -> this.createArrowEvent(ScreenDirection.LEFT);
-            case 264 -> this.createArrowEvent(ScreenDirection.DOWN);
-            case 265 -> this.createArrowEvent(ScreenDirection.UP);
-         };
+         Object var10000;
+         switch (var1) {
+            case 258:
+               var10000 = this.createTabEvent();
+               break;
+            case 259:
+            case 260:
+            case 261:
+            default:
+               var10000 = null;
+               break;
+            case 262:
+               var10000 = this.createArrowEvent(ScreenDirection.RIGHT);
+               break;
+            case 263:
+               var10000 = this.createArrowEvent(ScreenDirection.LEFT);
+               break;
+            case 264:
+               var10000 = this.createArrowEvent(ScreenDirection.DOWN);
+               break;
+            case 265:
+               var10000 = this.createArrowEvent(ScreenDirection.UP);
+         }
+
+         Object var4 = var10000;
          if (var4 != null) {
             ComponentPath var5 = super.nextFocusPath((FocusNavigationEvent)var4);
             if (var5 == null && var4 instanceof FocusNavigationEvent.TabNavigation) {
@@ -175,13 +199,15 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
             this.changeFocus(var2);
          }
       }
+
    }
 
    protected void setInitialFocus(GuiEventListener var1) {
-      ComponentPath var2 = ComponentPath.path(this, var1.nextFocusPath(new FocusNavigationEvent.InitialFocus()));
+      ComponentPath var2 = ComponentPath.path((ContainerEventHandler)this, (ComponentPath)var1.nextFocusPath(new FocusNavigationEvent.InitialFocus()));
       if (var2 != null) {
          this.changeFocus(var2);
       }
+
    }
 
    public void clearFocus() {
@@ -189,6 +215,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       if (var1 != null) {
          var1.applyFocus(false);
       }
+
    }
 
    @VisibleForTesting
@@ -202,23 +229,23 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    public void onClose() {
-      this.minecraft.setScreen(null);
+      this.minecraft.setScreen((Screen)null);
    }
 
    protected <T extends GuiEventListener & Renderable & NarratableEntry> T addRenderableWidget(T var1) {
       this.renderables.add((Renderable)var1);
-      return this.addWidget((T)var1);
+      return this.addWidget(var1);
    }
 
    protected <T extends Renderable> T addRenderableOnly(T var1) {
       this.renderables.add(var1);
-      return (T)var1;
+      return var1;
    }
 
    protected <T extends GuiEventListener & NarratableEntry> T addWidget(T var1) {
       this.children.add(var1);
       this.narratables.add((NarratableEntry)var1);
-      return (T)var1;
+      return var1;
    }
 
    protected void removeWidget(GuiEventListener var1) {
@@ -240,7 +267,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    public static List<Component> getTooltipFromItem(Minecraft var0, ItemStack var1) {
-      return var1.getTooltipLines(var0.player, var0.options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL);
+      return var1.getTooltipLines(Item.TooltipContext.of((Level)var0.level), var0.player, var0.options.advancedItemTooltips ? TooltipFlag.Default.ADVANCED : TooltipFlag.Default.NORMAL);
    }
 
    protected void insertText(String var1, boolean var2) {
@@ -256,13 +283,14 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
                this.insertText(var1.getInsertion(), false);
             }
          } else if (var2 != null) {
+            URI var3;
             if (var2.getAction() == ClickEvent.Action.OPEN_URL) {
-               if (!this.minecraft.options.chatLinks().get()) {
+               if (!(Boolean)this.minecraft.options.chatLinks().get()) {
                   return false;
                }
 
                try {
-                  URI var3 = new URI(var2.getValue());
+                  var3 = new URI(var2.getValue());
                   String var4 = var3.getScheme();
                   if (var4 == null) {
                      throw new URISyntaxException(var2.getValue(), "Missing protocol");
@@ -272,7 +300,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
                      throw new URISyntaxException(var2.getValue(), "Unsupported protocol: " + var4.toLowerCase(Locale.ROOT));
                   }
 
-                  if (this.minecraft.options.chatLinksPrompt().get()) {
+                  if ((Boolean)this.minecraft.options.chatLinksPrompt().get()) {
                      this.clickedLink = var3;
                      this.minecraft.setScreen(new ConfirmLinkScreen(this::confirmLink, var2.getValue(), false));
                   } else {
@@ -282,18 +310,18 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
                   LOGGER.error("Can't open url for {}", var2, var5);
                }
             } else if (var2.getAction() == ClickEvent.Action.OPEN_FILE) {
-               URI var6 = new File(var2.getValue()).toURI();
-               this.openLink(var6);
+               var3 = (new File(var2.getValue())).toURI();
+               this.openLink(var3);
             } else if (var2.getAction() == ClickEvent.Action.SUGGEST_COMMAND) {
                this.insertText(StringUtil.filterText(var2.getValue()), true);
             } else if (var2.getAction() == ClickEvent.Action.RUN_COMMAND) {
-               String var7 = StringUtil.filterText(var2.getValue());
-               if (var7.startsWith("/")) {
-                  if (!this.minecraft.player.connection.sendUnsignedCommand(var7.substring(1))) {
-                     LOGGER.error("Not allowed to run command with signed argument from click event: '{}'", var7);
+               String var6 = StringUtil.filterText(var2.getValue());
+               if (var6.startsWith("/")) {
+                  if (!this.minecraft.player.connection.sendUnsignedCommand(var6.substring(1))) {
+                     LOGGER.error("Not allowed to run command with signed argument from click event: '{}'", var6);
                   }
                } else {
-                  LOGGER.error("Failed to run command without '/' prefix from click event: '{}'", var7);
+                  LOGGER.error("Failed to run command without '/' prefix from click event: '{}'", var6);
                }
             } else if (var2.getAction() == ClickEvent.Action.COPY_TO_CLIPBOARD) {
                this.minecraft.keyboardHandler.setClipboard(var2.getValue());
@@ -332,7 +360,6 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       this.setInitialFocus();
    }
 
-   @Override
    public List<? extends GuiEventListener> children() {
       return this.children;
    }
@@ -405,22 +432,18 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
 
    public static boolean hasControlDown() {
       if (Minecraft.ON_OSX) {
-         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 343)
-            || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 347);
+         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 343) || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 347);
       } else {
-         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 341)
-            || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 345);
+         return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 341) || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 345);
       }
    }
 
    public static boolean hasShiftDown() {
-      return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 340)
-         || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 344);
+      return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 340) || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 344);
    }
 
    public static boolean hasAltDown() {
-      return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 342)
-         || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 346);
+      return InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 342) || InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), 346);
    }
 
    public static boolean isCut(int var0) {
@@ -455,7 +478,9 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       } catch (Throwable var6) {
          CrashReport var4 = CrashReport.forThrowable(var6, var1);
          CrashReportCategory var5 = var4.addCategory("Affected screen");
-         var5.setDetail("Screen name", () -> var2);
+         var5.setDetail("Screen name", () -> {
+            return var2;
+         });
          throw new ReportedException(var4);
       }
    }
@@ -472,7 +497,6 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       }
    }
 
-   @Override
    public boolean isMouseOver(double var1, double var3) {
       return true;
    }
@@ -485,6 +509,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       if (var3) {
          this.narrationSuppressTime = -9223372036854775808L;
       }
+
    }
 
    private void suppressNarration(long var1) {
@@ -515,12 +540,14 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
             this.nextNarrationTime = 9223372036854775807L;
          }
       }
+
    }
 
    public void triggerImmediateNarration(boolean var1) {
       if (this.shouldRunNarration()) {
          this.runNarration(var1);
       }
+
    }
 
    private void runNarration(boolean var1) {
@@ -529,6 +556,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       if (!var2.isEmpty()) {
          this.minecraft.getNarrator().sayNow(var2);
       }
+
    }
 
    protected boolean shouldNarrateNavigation() {
@@ -545,16 +573,15 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    protected void updateNarratedWidget(NarrationElementOutput var1) {
-      List var2 = this.narratables.stream().filter(NarratableEntry::isActive).collect(Collectors.toList());
-      Collections.sort(var2, Comparator.comparingInt(TabOrderedElement::getTabOrderGroup));
-      Screen.NarratableSearchResult var3 = findNarratableWidget(var2, this.lastNarratable);
+      List var2 = this.narratables.stream().filter(NarratableEntry::isActive).sorted(Comparator.comparingInt(TabOrderedElement::getTabOrderGroup)).toList();
+      NarratableSearchResult var3 = findNarratableWidget(var2, this.lastNarratable);
       if (var3 != null) {
          if (var3.priority.isTerminal()) {
             this.lastNarratable = var3.entry;
          }
 
          if (var2.size() > 1) {
-            var1.add(NarratedElementType.POSITION, Component.translatable("narrator.position.screen", var3.index + 1, var2.size()));
+            var1.add(NarratedElementType.POSITION, (Component)Component.translatable("narrator.position.screen", var3.index + 1, var2.size()));
             if (var3.priority == NarratableEntry.NarrationPriority.FOCUSED) {
                var1.add(NarratedElementType.USAGE, this.getUsageNarration());
             }
@@ -562,6 +589,7 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
 
          var3.entry.updateNarration(var1.nest());
       }
+
    }
 
    protected Component getUsageNarration() {
@@ -569,9 +597,9 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
    }
 
    @Nullable
-   public static Screen.NarratableSearchResult findNarratableWidget(List<? extends NarratableEntry> var0, @Nullable NarratableEntry var1) {
-      Screen.NarratableSearchResult var2 = null;
-      Screen.NarratableSearchResult var3 = null;
+   public static NarratableSearchResult findNarratableWidget(List<? extends NarratableEntry> var0, @Nullable NarratableEntry var1) {
+      NarratableSearchResult var2 = null;
+      NarratableSearchResult var3 = null;
       int var4 = 0;
 
       for(int var5 = var0.size(); var4 < var5; ++var4) {
@@ -579,12 +607,12 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
          NarratableEntry.NarrationPriority var7 = var6.narrationPriority();
          if (var7.isTerminal()) {
             if (var6 != var1) {
-               return new Screen.NarratableSearchResult(var6, var4, var7);
+               return new NarratableSearchResult(var6, var4, var7);
             }
 
-            var3 = new Screen.NarratableSearchResult(var6, var4, var7);
+            var3 = new NarratableSearchResult(var6, var4, var7);
          } else if (var7.compareTo(var2 != null ? var2.priority : NarratableEntry.NarrationPriority.NONE) > 0) {
-            var2 = new Screen.NarratableSearchResult(var6, var4, var7);
+            var2 = new NarratableSearchResult(var6, var4, var7);
          }
       }
 
@@ -601,8 +629,9 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
 
    public void setTooltipForNextRenderPass(List<FormattedCharSequence> var1, ClientTooltipPositioner var2, boolean var3) {
       if (this.deferredTooltipRendering == null || var3) {
-         this.deferredTooltipRendering = new Screen.DeferredTooltipRendering(var1, var2);
+         this.deferredTooltipRendering = new DeferredTooltipRendering(var1, var2);
       }
+
    }
 
    public void setTooltipForNextRenderPass(Component var1) {
@@ -613,7 +642,6 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       this.setTooltipForNextRenderPass(var1.toCharSequence(this.minecraft), var2, var3);
    }
 
-   @Override
    public ScreenRectangle getRectangle() {
       return new ScreenRectangle(0, 0, this.width, this.height);
    }
@@ -623,14 +651,31 @@ public abstract class Screen extends AbstractContainerEventHandler implements Re
       return null;
    }
 
-   static record DeferredTooltipRendering(List<FormattedCharSequence> a, ClientTooltipPositioner b) {
-      private final List<FormattedCharSequence> tooltip;
-      private final ClientTooltipPositioner positioner;
+   static {
+      PANORAMA = new PanoramaRenderer(CUBE_MAP);
+      MENU_BACKGROUND = new ResourceLocation("textures/gui/menu_background.png");
+      HEADER_SEPARATOR = new ResourceLocation("textures/gui/header_separator.png");
+      FOOTER_SEPARATOR = new ResourceLocation("textures/gui/footer_separator.png");
+      INWORLD_MENU_BACKGROUND = new ResourceLocation("textures/gui/inworld_menu_background.png");
+      INWORLD_HEADER_SEPARATOR = new ResourceLocation("textures/gui/inworld_header_separator.png");
+      INWORLD_FOOTER_SEPARATOR = new ResourceLocation("textures/gui/inworld_footer_separator.png");
+      NARRATE_SUPPRESS_AFTER_INIT_TIME = TimeUnit.SECONDS.toMillis(2L);
+      NARRATE_DELAY_NARRATOR_ENABLED = NARRATE_SUPPRESS_AFTER_INIT_TIME;
+   }
 
+   private static record DeferredTooltipRendering(List<FormattedCharSequence> tooltip, ClientTooltipPositioner positioner) {
       DeferredTooltipRendering(List<FormattedCharSequence> var1, ClientTooltipPositioner var2) {
          super();
          this.tooltip = var1;
          this.positioner = var2;
+      }
+
+      public List<FormattedCharSequence> tooltip() {
+         return this.tooltip;
+      }
+
+      public ClientTooltipPositioner positioner() {
+         return this.positioner;
       }
    }
 
